--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -27,12 +27,12 @@ jobs:
 
       - name: Run tests
         run: |
-          if [ -f docker-compose.test.yml ]; then
-            docker-compose --file docker-compose.test.yml build
-            docker-compose --file docker-compose.test.yml run sut
-          else
-            docker build . --file Dockerfile
-          fi
+          docker build . --file Dockerfile \
+            --build-arg streamable_username=${{ secrets.streamable_username }} \
+            --build-arg streamable_password=${{ secrets.streamable_password }} \
+            --build-arg reddit_client_id=${{ secrets.reddit_client_id }} \
+            --build-arg reddit_client_secret=${{ secrets.reddit_client_secret }} \
+            --build-arg reddit_refresh_token=${{ secrets.reddit_refresh_token }}
 
   # Push image to GitHub Packages.
   # See also https://docs.docker.com/docker-hub/builds/
