are the newline characters breaking it?

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -25,13 +25,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build image
-        run: docker build --file Dockerfile \
-          --build-arg streamable_username=${{ secrets.streamable_username }} \
-          --build-arg streamable_password=${{ secrets.streamable_password }} \
-          --build-arg reddit_client_id=${{ secrets.reddit_client_id }} \
-          --build-arg reddit_client_secret=${{ secrets.reddit_client_secret }} \
-          --build-arg reddit_refresh_token=${{ secrets.reddit_refresh_token }} \
-          --tag $IMAGE_NAME .
+        run: docker build --file Dockerfile --build-arg streamable_username=${{ secrets.streamable_username }} --build-arg streamable_password=${{ secrets.streamable_password }} --build-arg reddit_client_id=${{ secrets.reddit_client_id }} --build-arg reddit_client_secret=${{ secrets.reddit_client_secret }} --build-arg reddit_refresh_token=${{ secrets.reddit_refresh_token }} --tag $IMAGE_NAME .
 
       - name: Log into registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
