--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-cython
-spaw
-Pillow
-matplotlib
+cython==0.29.24
+spaw==0.2
+Pillow==8.3.2
+matplotlib==3.4.3
 opencv-python
-pydub
-moviepy
+pydub==0.25.1
+moviepy==1.0.3
 ffmpeg-python
-spacy
-textblob
-praw
-tinydb
+spacy==2.3.7
+textblob==0.15.3
+praw==7.4.0
+tinydb==4.5.2
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
